--- a/templates/article.html
+++ b/templates/article.html
@@ -1,21 +1,23 @@
 {% extends "base.html" %}
 
 {% block title %}
-    {{ SITENAME }} - {{ article.title }}
+    {{ article.title }} - {{ SITENAME }}
 {% endblock %}
 
 {% block content %}
     <div class="article">
         <h1>{{ article.title }}</h1>
-        <small>publié le {{ article.date.strftime('%d/%m/%Y') }} dans <a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a></small>
-        <small>| tags : </small>
-        {% for tag in article.tags %}
+        <small>发布于 {{ article.date.strftime('%Y.%m.%d') }}，
+            分类：<a href="{{ SITEURL }}/{{ category.url }}">{{ category }}</a></small>
+        <small>，Tag:</small>{% for tag in article.tags %}
             {% if loop.last %}
                 <span class="tag"><a href="{{ SITEURL}}/{{ tag.url }}">{{ tag }}</a></span>
             {% else %}
                 <span class="tag"><a href="{{ SITEURL}}/{{ tag.url }}">{{ tag }}</a>,</span>
             {% endif %}
         {% endfor %}
+
+        <hr/>
 
         <div class="article-content">
             {{ article.content }}
