--- a/templates/index.html
+++ b/templates/index.html
@@ -7,8 +7,8 @@
                 <div class="grid grid-pad">
                     <div class="col-8-12">
                         <h3><a href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h3>
-                        <small>publié le {{ article.date.strftime('%d/%m/%Y') }}</small>
-                        <small>| tags : </small>{% for tag in article.tags %}
+                        <small>发布于 {{ article.date.strftime('%Y.%m.%d') }}</small>
+                        <small>，Tag:</small>{% for tag in article.tags %}
                             {% if loop.last %}
                                 <span class="tag"><a href="{{ SITEURL}}/{{ tag.url }}">{{ tag }}</a></span>
                             {% else %}
